--- a/AutoPartsShop/Views/Orders/Index.cshtml
+++ b/AutoPartsShop/Views/Orders/Index.cshtml
@@ -17,7 +17,11 @@
                     <th>Order ID</th>
                     <th>Items</th>
                     <th>Total</th>
-                    <th>User</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>User</th>
+                    }
+                    
                 </tr>
             </thead>
             <tbody>
@@ -30,7 +34,7 @@
                             {
                                 <li>
                                     <div class="alert alert-info" role="alert">
-                                         <span class="badge bg-success">@item.Amount</span> [@item.Price.ToString("c")] - @item.PartName.Name
+                                        <span class="badge bg-success">@item.Amount</span> [@item.Price.ToString("c")] - @item.PartName.Name
                                     </div>
                                 </li>
                             }
@@ -39,8 +43,12 @@
                     <td class="align-middle">
                         @order.OrderItems.Select(m => m.PartName.Price * m.Amount).Sum().ToString("c")
                     </td>
-                    <td class="align-middle"> - </td>
-                </tr>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <td class="align-middle"> @order.User.FullName </td>
+                    }
+                    
+                    </tr>
                 }
             </tbody>
         </table>
