--- a/AutoPartsShop/Views/_ViewImports.cshtml
+++ b/AutoPartsShop/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using AutoPartsShop
 @using AutoPartsShop.Models
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
