--- a/AutoPartsShop/Views/PartNames/Details.cshtml
+++ b/AutoPartsShop/Views/PartNames/Details.cshtml
@@ -29,6 +29,7 @@
                                         @Model.Shop.Name
                                     </a>
                                 </p>
+                                <p class="card-text"><b>Location: </b>@Model.Shop.Description</p>
                                 <p class="card-text">
                                     <b>Manufacturer: </b>
                                     <a asp-controller="Producers" asp-action="Details" asp-route-id="@Model.ProducerId">
