--- a/AutoPartsShop/Views/Producers/Index.cshtml
+++ b/AutoPartsShop/Views/Producers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model IEnumerable<Producer>
 @{
-    ViewData["Title"] = "List of producers";
+    ViewData["Title"] = "List of manufacturers";
 }
 
 <div class="row">
